--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" sizes="200x200" type="image/png" href="https://e7.pngegg.com/pngimages/90/509/png-clipart-japanese-calligraphy-ink-brush-kanji-lettering-japan-love-hat.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tomas Rodriguez</title>
-    <script type="module" crossorigin src="/assets/index.82c5b4f5.js"></script>
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.8ef010fe.js"></script>
     <link rel="modulepreload" href="/assets/vendor.d33f295a.js">
     <link rel="stylesheet" href="/assets/index.0b946baa.css">
   </head>
